# ReportCreation

./: .rules  Cargo.toml  README.md
src/: block.rs  lib.rs  render.rs  report.rs  section.rs
src/block/: bullet_list.rs  code.rs  figure.rs  image.rs  link.rs  mod.rs  numbered_list.rs  paragraph.rs  raw.rs  table.rs  text.rs
src/render/: block.rs  mod.rs  table.rs
tests/: cli.rs
