[package]
name = "ReportCreation"
version = "0.1.0"
edition = "2024"

[features]
polars = ["dep:polars"]

[dependencies]
typst = "0.11.1"
typst-pdf = "0.11"
typst-assets = { version = "0.11.1", features = ["fonts"] }
comemo = "0.4"
polars = { version = "0.44.2", optional = true, default-features = false, features = ["fmt"] }
time = { version = "0.3.20", features = ["local-offset"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
